--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <h1>Kishan Patel</h1>
-  <>Welcome to my in progress portfolio site.
+  <h2>Welcome to my in-progress portfolio site.</h2>
   <p>📫 Email me at <a href="mailto:kishan@kishan-patel.com">kishan@kishan-patel.com</a></p>
 </body>
 </html>
