--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kishan Patel – Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; padding: 2rem; background: #f8f8f8; color: #333; }
-    h1 { color: #222; }
-    a { color: #0077cc; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
-  <h1>Kishan Patel</h1>
-  <h2>Welcome to my in-progress portfolio site.</h2>
-  <p>📫 Email me at <a href="mailto:kishan@kishan-patel.com">kishan@kishan-patel.com</a></p>
+  <header>
+    <div class="logo">Kishan Patel</div>
+    <nav>
+      <a href="projects.html" title="Projects">🛠️ Projects</a>
+      <a href="resume.html" title="Resume">📄 Resume</a>
+      <a href="contact.html" title="Contact">✉️ Contact</a>
+      <a href="https://github.com/YOUR_GITHUB" target="_blank" title="GitHub">🐱 GitHub</a>
+      <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" title="LinkedIn">💼 LinkedIn</a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="hero">
+      <img src="assets/your-photo.jpg" alt="Kishan Patel photo" class="profile-pic"/>
+      <h1>Hello, I'm Kishan Patel</h1>
+      <p>This is my in-progress portfolio website. More to come soon!</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Kishan Patel</p>
+  </footer>
 </body>
 </html>
