Update index.html for night mode

--- a/index.html
+++ b/index.html
@@ -9,15 +9,24 @@
 </head>
 <body>
   <header>
-    <div class="logo">Kishan Patel</div>
-    <nav>
-      <a href="projects.html" title="Projects">🛠️ Projects</a>
-      <a href="resume.html" title="Resume">📄 Resume</a>
-      <a href="contact.html" title="Contact">✉️ Contact</a>
-      <a href="https://github.com/YOUR_GITHUB" target="_blank" title="GitHub">🐱 GitHub</a>
-      <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" title="LinkedIn">💼 LinkedIn</a>
-    </nav>
-  </header>
+  <div class="logo">Kishan Patel</div>
+  <nav>
+    <a href="projects.html">🛠️ Projects</a>
+    <a href="resume.html">📄 Resume</a>
+    <a href="contact.html">✉️ Contact</a>
+    <a href="mailto:kishan@kishan-patel.com">
+      <img src="assets/email.svg" alt="Email" class="icon">Contact
+    </a>
+    <a href="https://github.com/YOUR_GITHUB" target="_blank">
+      <img src="assets/github.svg" alt="GitHub" class="icon">GitHub
+    </a>
+    <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank">
+      <img src="assets/linkedin.svg" alt="LinkedIn" class="icon">LinkedIn
+    </a>
+    <button class="toggle-btn" id="themeToggle" title="Toggle Theme">🌙</button>
+  </nav>
+</header>
+
 
   <main>
     <section class="hero">
