--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
+  <script src="script.js"></script>
 <body>
   <header>
   <div class="logo">Kishan Patel</div>
