--- a/index.html
+++ b/index.html
@@ -1,44 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Kishan Patel – Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="style.css"/>
 </head>
-  <script src="script.js"></script>
 <body>
   <header>
-  <div class="logo">Kishan Patel</div>
-  <nav>
-    <a href="projects.html">🛠️ Projects</a>
-    <a href="resume.html">📄 Resume</a>
-    <a href="contact.html">✉️ Contact</a>
-    <a href="mailto:kishan@kishan-patel.com">
-      <img src="assets/email.svg" alt="Email" class="icon">Contact
-    </a>
-    <a href="https://github.com/YOUR_GITHUB" target="_blank">
-      <img src="assets/github.svg" alt="GitHub" class="icon">GitHub
-    </a>
-    <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank">
-      <img src="assets/linkedin.svg" alt="LinkedIn" class="icon">LinkedIn
-    </a>
-    <button class="toggle-btn" id="themeToggle" title="Toggle Theme">🌙</button>
-  </nav>
-</header>
+    <div class="logo">Kishan Patel</div>
+    <nav>
+  <a href="index.html">🏠 Home</a>
+  <a href="projects.html">🛠️ Projects</a>
+  <a href="resume.html">📄 Resume</a>
 
+  <!-- Contact (email logo + text) -->
+  <a href="contact.html" title="Contact">
+    <img src="assets/email.svg" alt="Contact" class="icon"/>Contact
+  </a>
+
+  <!-- GitHub -->
+  <a href="https://github.com/YOUR_GITHUB" target="_blank" title="GitHub">
+    <img src="assets/github.svg" alt="GitHub" class="icon"/>GitHub
+  </a>
+
+  <!-- LinkedIn -->
+  <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" title="LinkedIn">
+    <img src="assets/linkedin.svg" alt="LinkedIn" class="icon"/>LinkedIn
+  </a>
+
+  <!-- Theme toggle -->
+  <button id="themeToggle" title="Toggle Theme">🌙</button>
+</nav>
+
+  </header>
 
   <main>
     <section class="hero">
       <img src="assets/your-photo.jpg" alt="Kishan Patel photo" class="profile-pic"/>
-      <h1>Hello, I'm Kishan Patel</h1>
+      <h1>Hello, I’m Kishan Patel</h1>
       <p>This is my in-progress portfolio website. More to come soon!</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Kishan Patel</p>
+    <p>© 2025 Kishan Patel</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
