--- a/resume.html
+++ b/resume.html
@@ -10,12 +10,29 @@
   <header>
     <div class="logo">Kishan Patel</div>
     <nav>
-      <a href="index.html">🏠 Home</a>
-      <a href="projects.html">🛠️ Projects</a>
-      <a href="contact.html">✉️ Contact</a>
-      <a href="https://github.com/YOUR_GITHUB" target="_blank">🐱 GitHub</a>
-      <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank">💼 LinkedIn</a>
-    </nav>
+  <a href="index.html">🏠 Home</a>
+  <a href="projects.html">🛠️ Projects</a>
+  <a href="resume.html">📄 Resume</a>
+
+  <!-- Contact (email logo + text) -->
+  <a href="contact.html" title="Contact">
+    <img src="assets/email.svg" alt="Contact" class="icon"/>Contact
+  </a>
+
+  <!-- GitHub -->
+  <a href="https://github.com/YOUR_GITHUB" target="_blank" title="GitHub">
+    <img src="assets/github.svg" alt="GitHub" class="icon"/>GitHub
+  </a>
+
+  <!-- LinkedIn -->
+  <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" title="LinkedIn">
+    <img src="assets/linkedin.svg" alt="LinkedIn" class="icon"/>LinkedIn
+  </a>
+
+  <!-- Theme toggle -->
+  <button id="themeToggle" title="Toggle Theme">🌙</button>
+</nav>
+
   </header>
 
   <main>
