--- a/contact.html
+++ b/contact.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact – Kishan Patel</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header>
     <div class="logo">Kishan Patel</div>
     <nav>
-      <a href="index.html">🏠 Home</a>
-      <a href="projects.html">🛠️ Projects</a>
-      <a href="resume.html">📄 Resume</a>
-      <a href="https://github.com/YOUR_GITHUB" target="_blank">🐱 GitHub</a>
-      <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank">💼 LinkedIn</a>
-    </nav>
+  <a href="index.html">🏠 Home</a>
+  <a href="projects.html">🛠️ Projects</a>
+  <a href="resume.html">📄 Resume</a>
+
+  <!-- Contact (email logo + text) -->
+  <a href="contact.html" title="Contact">
+    <img src="assets/email.svg" alt="Contact" class="icon"/>Contact
+  </a>
+
+  <!-- GitHub -->
+  <a href="https://github.com/YOUR_GITHUB" target="_blank" title="GitHub">
+    <img src="assets/github.svg" alt="GitHub" class="icon"/>GitHub
+  </a>
+
+  <!-- LinkedIn -->
+  <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" title="LinkedIn">
+    <img src="assets/linkedin.svg" alt="LinkedIn" class="icon"/>LinkedIn
+  </a>
+
+  <!-- Theme toggle -->
+  <button id="themeToggle" title="Toggle Theme">🌙</button>
+</nav>
+
   </header>
 
   <main>
-    <h1>Contact</h1>
-    <p>📫 You can reach me at <a href="mailto:kishan@kishan-patel.com">kishan@kishan-patel.com</a></p>
+    <section class="hero">
+      <h1>Contact</h1>
+      <p>📫 You can reach me at <a href="mailto:kishan@kishan-patel.com">kishan@kishan-patel.com</a></p>
+    </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Kishan Patel</p>
+    <p>© 2025 Kishan Patel</p>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
