--- a/contact.html
+++ b/contact.html
@@ -14,17 +14,17 @@
   <a href="projects.html">🛠️ Projects</a>
   <a href="resume.html">📄 Resume</a>
 
-  <!-- Contact (email logo + text) -->
+  <!-- Contact link (uses email.svg) -->
   <a href="contact.html" title="Contact">
     <img src="assets/email.svg" alt="Contact" class="icon"/>Contact
   </a>
 
-  <!-- GitHub -->
+  <!-- GitHub link (uses github.svg) -->
   <a href="https://github.com/YOUR_GITHUB" target="_blank" title="GitHub">
     <img src="assets/github.svg" alt="GitHub" class="icon"/>GitHub
   </a>
 
-  <!-- LinkedIn -->
+  <!-- LinkedIn link (uses linkedin.svg) -->
   <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" title="LinkedIn">
     <img src="assets/linkedin.svg" alt="LinkedIn" class="icon"/>LinkedIn
   </a>
@@ -32,6 +32,7 @@
   <!-- Theme toggle -->
   <button id="themeToggle" title="Toggle Theme">🌙</button>
 </nav>
+
 
   </header>
 
