--- a/index.html
+++ b/index.html
@@ -2,50 +2,60 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kishan Patel – Portfolio</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Kishan Patel</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header>
-    <div class="logo">Kishan Patel</div>
-    <nav>
-  <a href="index.html">🏠 Home</a>
-  <a href="projects.html">🛠️ Projects</a>
-  <a href="resume.html">📄 Resume</a>
-
-  <!-- Contact link (uses email.svg) -->
-  <a href="contact.html" title="Contact">
-    <img src="assets/email.svg" alt="Contact" class="icon"/>Contact
-  </a>
-
-  <!-- GitHub link (uses github.svg) -->
-  <a href="https://github.com/YOUR_GITHUB" target="_blank" title="GitHub">
-    <img src="assets/github.svg" alt="GitHub" class="icon"/>GitHub
-  </a>
-
-  <!-- LinkedIn link (uses linkedin.svg) -->
-  <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" title="LinkedIn">
-    <img src="assets/linkedin.svg" alt="LinkedIn" class="icon"/>LinkedIn
-  </a>
-
-  <!-- Theme toggle -->
-  <button id="themeToggle" title="Toggle Theme">🌙</button>
-</nav>
-
-
+    <nav class="container">
+      <div class="nav-left">
+        <a href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="resume.html">Resume</a>
+      </div>
+      <div class="nav-right">
+        <a href="contact.html" title="Contact">
+          <img src="assets/email.svg" class="icon" alt="Contact"/>
+        </a>
+        <a href="https://github.com/YOUR_GITHUB" target="_blank" title="GitHub">
+          <img src="assets/github.svg" class="icon" alt="GitHub"/>
+        </a>
+        <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" title="LinkedIn">
+          <img src="assets/linkedin.svg" class="icon" alt="LinkedIn"/>
+        </a>
+        <button id="themeToggle" title="Toggle Theme">🌙</button>
+      </div>
+    </nav>
   </header>
 
-  <main>
+  <main class="container">
     <section class="hero">
-      <img src="assets/your-photo.jpg" alt="Kishan Patel photo" class="profile-pic"/>
-      <h1>Hello, I’m Kishan Patel</h1>
-      <p>This is my in-progress portfolio website. More to come soon!</p>
+      <h1>Kishan Patel</h1>
+      <p class="subtitle">Aerospace Engineer</p>
+      <p class="blurb">
+        Building solar cars, exploring composite materials, and helping to design the next generation of American defense systems.<br/>
+        Welcome to my portfolio.
+      </p>
+    </section>
+
+    <section class="section">
+      <h2>Experience</h2>
+      <div class="placeholder">[Bullet your top roles here]</div>
+    </section>
+
+    <section class="section">
+      <h2>Worked Programs</h2>
+      <div class="projects-grid">
+        <div class="card placeholder">Litening</div>
+        <div class="card placeholder">AN/APR-39</div>
+        <div class="card placeholder">Guardian IRCM</div>
+      </div>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Kishan Patel</p>
+    <div class="container">&copy; 2025 Kishan Patel</div>
   </footer>
 
   <script src="script.js"></script>
