--- a/projects.html
+++ b/projects.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Projects – Kishan Patel</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <header>
-    <div class="logo">Kishan Patel</div>
+<header>
+  <div class="container">
     <nav>
-      <a href="index.html">🏠 Home</a>
-      <a href="resume.html">📄 Resume</a>
-      <a href="contact.html">✉️ Contact</a>
-      <a href="https://github.com/YOUR_GITHUB" target="_blank">🐱 GitHub</a>
-      <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank">💼 LinkedIn</a>
+      <div class="logo">Kishan Patel</div>
+      <div class="links">
+        <a href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="resume.html">Resume</a>
+        <a href="contact.html">Contact</a>
+        <a href="https://github.com/YOUR_GITHUB" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank">LinkedIn</a>
+      </div>
     </nav>
-  </header>
+  </div>
+</header>
 
-  <main>
-    <h1>Projects</h1>
-    <p>This is a placeholder for blog-style posts about your projects.</p>
-  </main>
+<main class="container section">
+  <h2>Projects</h2>
+  <div class="projects-grid">
+    <div class="card placeholder">Project A</div>
+    <div class="card placeholder">Project B</div>
+  </div>
+</main>
 
-  <footer>
-    <p>&copy; 2025 Kishan Patel</p>
-  </footer>
+
+<footer>
+  <div class="container">
+    &copy; 2025 Kishan Patel
+  </div>
+</footer>
 </body>
 </html>
