--- a/resume.html
+++ b/resume.html
@@ -1,48 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Resume – Kishan Patel</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <header>
-    <div class="logo">Kishan Patel</div>
+<header>
+  <div class="container">
     <nav>
-  <a href="index.html">🏠 Home</a>
-  <a href="projects.html">🛠️ Projects</a>
-  <a href="resume.html">📄 Resume</a>
+      <div class="logo">Kishan Patel</div>
+      <div class="links">
+        <a href="index.html">Home</a>
+        <a href="projects.html">Projects</a>
+        <a href="resume.html">Resume</a>
+        <a href="contact.html">Contact</a>
+        <a href="https://github.com/YOUR_GITHUB" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank">LinkedIn</a>
+      </div>
+    </nav>
+  </div>
+</header>
 
-  <!-- Contact link (uses email.svg) -->
-  <a href="contact.html" title="Contact">
-    <img src="assets/email.svg" alt="Contact" class="icon"/>Contact
-  </a>
-
-  <!-- GitHub link (uses github.svg) -->
-  <a href="https://github.com/YOUR_GITHUB" target="_blank" title="GitHub">
-    <img src="assets/github.svg" alt="GitHub" class="icon"/>GitHub
-  </a>
-
-  <!-- LinkedIn link (uses linkedin.svg) -->
-  <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" title="LinkedIn">
-    <img src="assets/linkedin.svg" alt="LinkedIn" class="icon"/>LinkedIn
-  </a>
-
-  <!-- Theme toggle -->
-  <button id="themeToggle" title="Toggle Theme">🌙</button>
-</nav>
+<main class="container section">
+  <h2>Resume</h2>
+  <iframe src="assets/resume.pdf" style="width:100%;height:600px;border:none;border-radius:4px;"></iframe>
+</main>
 
 
-  </header>
-
-  <main>
-    <h1>Resume</h1>
-    <p>This is a placeholder for your resume. You can upload a PDF and embed or link it here.</p>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 Kishan Patel</p>
-  </footer>
+<footer>
+  <div class="container">
+    &copy; 2025 Kishan Patel
+  </div>
+</footer>
 </body>
 </html>
