--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Kishan Patel</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css"/>
 </head>
+
 <body>
   <header>
     <nav class="container">
@@ -30,14 +32,17 @@
   </header>
 
   <main class="container">
-    <section class="hero">
-      <h1>Kishan Patel</h1>
-      <p class="subtitle">Aerospace Engineer</p>
-      <p class="blurb">
-        Building solar cars, exploring composite materials, and helping to design the next generation of American defense systems.<br/>
-        Welcome to my portfolio.
-      </p>
-    </section>
+    <section class="section hero">
+  <h1>Kishan Patel</h1>
+  <p class="subtitle">Aerospace Engineering Student &amp; Drone Designer</p>
+  <p class="blurb">
+    Building solar cars, exploring composite materials, and helping to design the next generation of American defense systems.
+  </p>
+  <p class="blurb">
+    Welcome to my portfolio.
+  </p>
+</section>
+
 
     <section class="section">
       <h2>Experience</h2>
