fixed end day 1

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <main class="container">
     <section class="section hero">
   <h1>Kishan Patel</h1>
-  <p class="subtitle">Aerospace Engineering Student &amp; Drone Designer</p>
+  <p class="subtitle">Aerospace Engineer</p>
   <p class="blurb">
     Building solar cars, exploring composite materials, and helping to design the next generation of American defense systems.
   </p>
