--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Projects – Kishan Patel</title>
   <link rel="stylesheet" href="style.css"/>
+  <!-- in your <head> -->
+  <link
+  href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+  rel="stylesheet"
+/>
+
 </head>
 <body>
 <header>
@@ -16,8 +22,8 @@
         <a href="projects.html">Projects</a>
         <a href="resume.html">Resume</a>
         <a href="contact.html">Contact</a>
-        <a href="https://github.com/YOUR_GITHUB" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank">LinkedIn</a>
+        <a href="https://github.com/Kishanp76" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/kishan-patel-2b9a08253/" target="_blank">LinkedIn</a>
       </div>
     </nav>
   </div>
