--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Contact – Kishan Patel</title>
+
+  <!-- Fonts & Styles -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+  <!-- HEADER -->
   <header>
     <nav class="container">
       <div class="nav-left">
@@ -15,39 +20,43 @@
         <a href="resume.html">Resume</a>
       </div>
       <div class="nav-right">
-        <a href="contact.html" title="Contact">
-          <img src="assets/email.svg" class="icon" alt="Contact"/>
-        </a>
-        <a href="https://github.com/YOUR_GITHUB" target="_blank" title="GitHub">
+        <a href="index.html">✉️ Contact</a>
+        <a href="https://github.com/Kishanp76" target="_blank">
           <img src="assets/github.svg" class="icon" alt="GitHub"/>
         </a>
-        <a href="https://www.linkedin.com/in/YOUR_LINKEDIN" target="_blank" title="LinkedIn">
+        <a href="https://www.linkedin.com/in/kishan-patel-2b9a08253/" target="_blank">
           <img src="assets/linkedin.svg" class="icon" alt="LinkedIn"/>
         </a>
-        <button id="themeToggle" title="Toggle Theme">🌙</button>
+        <button id="themeToggle" class="toggle-btn">🌙</button>
       </div>
     </nav>
   </header>
 
-  <main class="container section">
-    <h2>Contact</h2>
-    <form class="contact-form">
-      <label>
-        Name
-        <input type="text" placeholder="Your name"/>
-      </label>
-      <label>
-        Email
-        <input type="email" placeholder="you@example.com"/>
-      </label>
-      <label>
-        Message
-        <textarea rows="5" placeholder="Your message…"></textarea>
-      </label>
-      <button type="submit">Send</button>
-    </form>
+  <!-- MAIN -->
+  <main class="container">
+    <section class="section">
+      <h2>Contact Me</h2>
+      <div class="contact-card">
+        <form class="contact-form" action="mailto:kishan@kishan-patel.com" method="post" enctype="text/plain">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input id="name" name="Name" type="text" required placeholder="Your Name"/>
+          </div>
+          <div class="form-group">
+            <label for="email">Email Address</label>
+            <input id="email" name="Email" type="email" required placeholder="you@example.com"/>
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea id="message" name="Message" rows="6" required placeholder="Your message..."></textarea>
+          </div>
+          <button type="submit">Send Message</button>
+        </form>
+      </div>
+    </section>
   </main>
 
+  <!-- FOOTER -->
   <footer>
     <div class="container">&copy; 2025 Kishan Patel</div>
   </footer>
