--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- EXPERIENCE SECTION -->
     <section class="section">
       <h2>Experience</h2>
-      <div class="placeholder">[Bullet your top roles here]</div>
+      <div class="placeholder">[WIP]</div>
     </section>
 
     
