--- a/projects.html
+++ b/projects.html
@@ -14,26 +14,33 @@
 </head>
 <body>
 <header>
-  <div class="container">
-    <nav>
-      <div class="logo">Kishan Patel</div>
-      <div class="links">
+    <nav class="container">
+      <div class="nav-left">
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
         <a href="resume.html">Resume</a>
-        <a href="contact.html">Contact</a>
-        <a href="https://github.com/Kishanp76" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/kishan-patel-2b9a08253/" target="_blank">LinkedIn</a>
+      </div>
+      <div class="nav-right">
+        <a href="contact.html" title="Contact">
+          <img src="assets/email.svg" class="icon" alt="Contact"/>
+        </a>
+        <a href="https://github.com/Kishanp76" target="_blank" title="GitHub">
+          <img src="assets/github.svg" class="icon" alt="GitHub"/>
+        </a>
+        <a href="https://www.linkedin.com/in/kishan-patel-2b9a08253/" target="_blank" title="LinkedIn">
+          <img src="assets/linkedin.svg" class="icon" alt="LinkedIn"/>
+        </a>
+        <!-- Theme toggle -->
+        <button id="themeToggle" class="toggle-btn" title="Toggle Theme">🌙</button>
       </div>
     </nav>
-  </div>
-</header>
+  </header>
 
 <main class="container section">
   <h2>Projects</h2>
   <div class="projects-grid">
-    <div class="card placeholder">Project A</div>
-    <div class="card placeholder">Project B</div>
+    <div class="card placeholder">WIP</div>
+    
   </div>
 </main>
 
